refactor: prepare Major Release 4 - Jakarta EE and Spring Boot 4 upgrade
Major dependency upgrades for release 4.0:

1. Jakarta EE Migration
   - Replace javax.annotation.* with jakarta.annotation.* across all modules
   - Aligns with Jakarta EE specification for Java EE namespace migration

2. Spring Framework Upgrades
   - Spring Boot: 3.5.9 → 4.0.3
   - Spring Framework: 6.2.15 → 7.0.5
   - Spring Security: 6.5.7 → 7.0.3
   - Spring Security OAuth2: 6.5.7 → 7.0.3

3. Test Framework Upgrades
   - JUnit Jupiter: 5.12.2 → 6.0.3
   - Maven Surefire: 3.5.4 → 3.5.5

Affected modules:
- java-api, env, java-security, java-security-test
- spring-security, spring-security-compatibility, spring-security-legacy-module
- token-client
- All sample applications

No functional changes, purely dependency version updates and namespace
migration for Jakarta EE compatibility.