@@ -18,7 +18,7 @@ import com.sap.cloud.security.xsuaa.tokenflows.Cacheable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.annotation.Nonnull;
+import jakarta.annotation.Nonnull;
 import java.net.URI;
 import java.security.NoSuchAlgorithmException;
 import java.security.PublicKey;
@@ -266,7 +266,7 @@ class OAuth2TokenKeyServiceWithCache implements Cacheable {
 					.collect(Collectors.joining("|"));
 
 			// e.g. url:<url>|app_tid:<app_tid>|client_id:<client_id>|azp:<azp>
-			return String.format("url:%s|%s", keyUri, paramString);
+			return "url:%s|%s".formatted(keyUri, paramString);
 		}
 	}
 
